# argos

./: Cargo.toml  README.md  argos.service  argos.timer  historical-startup-notes.md  nomos.md  sample.Dockerfile  startup-notes.md
ArgosCI/: config.json
src/: env.rs  error.rs  main.rs
src/repo/: config.rs  integrate.rs  mod.rs  setup.rs
src/repo/integrate/: build.rs  clippy.rs  doc.rs  doc_test.rs  examples_test.rs  format.rs  license.rs  mod.rs  test.rs  update.rs
src/utils/: git.rs  mod.rs
